minor style adaptations

--- a/html/index.html
+++ b/html/index.html
@@ -8,18 +8,17 @@
 <style>
   body {
     margin: 0px;
-    font: 20px 'RobotoRegular', Arial, sans-serif;
+    font: 20px "Open Sans", helvetica, sans-serif;
     font-weight: 100;
     height: 100%;
     color: #0f1419;
-    background-color: #4a5160;
+    background-color: #647382;
   }
 
   div.info {
     display: table;
-    background: #e8eaec;
+    background: #E2E6E9;
     padding: 20px 20px 20px 20px;
-    border: 1px dashed black;
     border-radius: 10px;
     margin: 0px auto auto auto;
   }
@@ -41,7 +40,7 @@
   }
 
   div.smaller p span {
-    color: #3D5266;
+    color: #e8eaec;
   }
 
   h1,
@@ -53,7 +52,7 @@
     padding: 0px 0px 0px 0px;
     display: table;
     margin: 36px auto auto auto;
-    font: 12px 'RobotoRegular', Arial, sans-serif;
+    font: 12px "Open Sans", helvetica, sans-serif;
   }
 
   #footer {
@@ -65,7 +64,7 @@
   #center {
     width: 400px;
     margin: 0 auto;
-    font: 12px Courier;
+    font: 12px "Open Sans";
   }
 </style>
 <script>
